{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 14,
  "lineage": "dcaa2025-3b41-1826-e2a6-be33254dcb7b",
  "resources": [
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "orcacloud-platform/orcacloud-platform-dev-frontend",
            "metadata": [
              {
                "annotations": {
                  "orcacloud.com/deployed-at": "2025-09-21T10:06:56Z",
                  "orcacloud.com/deployed-by": "terraform",
                  "orcacloud.com/environment": "dev",
                  "orcacloud.com/version": "1.0.0",
                  "prometheus.io/path": "/metrics",
                  "prometheus.io/port": "9113",
                  "prometheus.io/scrape": "true",
                  "terraform.io/managed": "true"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "frontend",
                  "app.kubernetes.io/instance": "dev",
                  "app.kubernetes.io/managed-by": "terraform",
                  "app.kubernetes.io/name": "react",
                  "app.kubernetes.io/part-of": "orcacloud-platform",
                  "app.kubernetes.io/version": "1.0.0",
                  "environment": "dev",
                  "project": "orcacloud-platform"
                },
                "name": "orcacloud-platform-dev-frontend",
                "namespace": "orcacloud-platform",
                "resource_version": "19602",
                "uid": "7a4a4fbf-50a9-4658-bb2a-9feda252390e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.108.111.66",
                "cluster_ips": [
                  "10.108.111.66"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "metrics",
                    "node_port": 0,
                    "port": 9113,
                    "protocol": "TCP",
                    "target_port": "9113"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "frontend",
                  "app.kubernetes.io/instance": "orcacloud-platform-dev",
                  "app.kubernetes.io/name": "react"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "orcacloud-platform-dev-frontend",
            "namespace": "orcacloud-platform"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.main"
          ]
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "orcacloud-platform/orcacloud-platform-dev-ingress-netpol",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app.kubernetes.io/component": "ingress",
                  "app.kubernetes.io/instance": "dev",
                  "app.kubernetes.io/managed-by": "terraform",
                  "app.kubernetes.io/name": "nginx",
                  "app.kubernetes.io/part-of": "orcacloud-platform",
                  "app.kubernetes.io/version": "1.0.0",
                  "environment": "dev",
                  "project": "orcacloud-platform"
                },
                "name": "orcacloud-platform-dev-ingress-netpol",
                "namespace": "orcacloud-platform",
                "resource_version": "5138",
                "uid": "11d7cde5-8c22-46dd-ab0b-ed7d29625dab"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8000",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app.kubernetes.io/component": "backend"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "80",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app.kubernetes.io/component": "frontend"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "80",
                        "protocol": "TCP"
                      },
                      {
                        "end_port": 0,
                        "port": "443",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app.kubernetes.io/name": "nginx"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "orcacloud-platform-dev-ingress-netpol",
            "namespace": "orcacloud-platform"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.main"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "kafka_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]"
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "kafka_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "orcacloud-platform/kafka",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "kafka"
                },
                "name": "kafka",
                "namespace": "orcacloud-platform",
                "resource_version": "19766",
                "uid": "58ade1b3-0a25-4145-b4bd-49ece1086aca"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "None",
                "cluster_ips": [
                  "None"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "kafka",
                    "node_port": 0,
                    "port": 9092,
                    "protocol": "TCP",
                    "target_port": "9092"
                  },
                  {
                    "name": "jmx",
                    "node_port": 0,
                    "port": 9101,
                    "protocol": "TCP",
                    "target_port": "9101"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "kafka"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "kafka",
            "namespace": "orcacloud-platform"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.main",
            "module.zookeeper.kubernetes_config_map.jmx_config",
            "module.zookeeper.kubernetes_config_map.zookeeper",
            "module.zookeeper.kubernetes_deployment.zookeeper",
            "module.zookeeper.kubernetes_manifest.zookeeper_servicemonitor",
            "module.zookeeper.kubernetes_persistent_volume_claim.zookeeper_data",
            "module.zookeeper.kubernetes_persistent_volume_claim.zookeeper_logs",
            "module.zookeeper.kubernetes_service.zookeeper"
          ]
        }
      ]
    },
    {
      "module": "module.namespace",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "orcacloud-platform",
            "metadata": [
              {
                "annotations": {
                  "orcacloud.com/deployed-at": "2025-09-21T10:06:56Z",
                  "orcacloud.com/deployed-by": "terraform",
                  "orcacloud.com/environment": "dev",
                  "orcacloud.com/version": "1.0.0",
                  "terraform.io/managed": "true"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "platform",
                  "app.kubernetes.io/instance": "dev",
                  "app.kubernetes.io/managed-by": "terraform",
                  "app.kubernetes.io/name": "orcacloud-platform",
                  "app.kubernetes.io/part-of": "orcacloud-platform",
                  "app.kubernetes.io/version": "1.0.0",
                  "environment": "dev",
                  "project": "orcacloud-platform"
                },
                "name": "orcacloud-platform",
                "resource_version": "19592",
                "uid": "2a692c30-af75-4081-844a-8cc44400c908"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "orcacloud-platform"
          }
        }
      ]
    },
    {
      "module": "module.namespace",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "orcacloud-platform/orcacloud-platform-allow-internal",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app.kubernetes.io/component": "platform",
                  "app.kubernetes.io/instance": "dev",
                  "app.kubernetes.io/managed-by": "terraform",
                  "app.kubernetes.io/name": "orcacloud-platform",
                  "app.kubernetes.io/part-of": "orcacloud-platform",
                  "app.kubernetes.io/version": "1.0.0",
                  "environment": "dev",
                  "project": "orcacloud-platform"
                },
                "name": "orcacloud-platform-allow-internal",
                "namespace": "orcacloud-platform",
                "resource_version": "5092",
                "uid": "c33c406e-abe1-4980-a28a-14271b8126c2"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "orcacloud-platform"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "orcacloud-platform-allow-internal",
            "namespace": "orcacloud-platform"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.main"
          ]
        }
      ]
    },
    {
      "module": "module.namespace",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "default_deny",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "orcacloud-platform/orcacloud-platform-default-deny",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app.kubernetes.io/component": "platform",
                  "app.kubernetes.io/instance": "dev",
                  "app.kubernetes.io/managed-by": "terraform",
                  "app.kubernetes.io/name": "orcacloud-platform",
                  "app.kubernetes.io/part-of": "orcacloud-platform",
                  "app.kubernetes.io/version": "1.0.0",
                  "environment": "dev",
                  "project": "orcacloud-platform"
                },
                "name": "orcacloud-platform-default-deny",
                "namespace": "orcacloud-platform",
                "resource_version": "5107",
                "uid": "5ce35a96-9878-48d7-bf21-099ec076b929"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  },
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "80",
                        "protocol": "TCP"
                      },
                      {
                        "end_port": 0,
                        "port": "443",
                        "protocol": "TCP"
                      }
                    ],
                    "to": []
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "orcacloud-platform-default-deny",
            "namespace": "orcacloud-platform"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.main"
          ]
        }
      ]
    },
    {
      "module": "module.postgresql",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "orcacloud-platform/orcacloud-platform-dev-postgresql",
            "metadata": [
              {
                "annotations": {
                  "orcacloud.com/deployed-at": "2025-09-21T10:06:56Z",
                  "orcacloud.com/deployed-by": "terraform",
                  "orcacloud.com/environment": "dev",
                  "orcacloud.com/version": "1.0.0",
                  "prometheus.io/path": "/metrics",
                  "prometheus.io/port": "9187",
                  "prometheus.io/scrape": "true",
                  "terraform.io/managed": "true"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "database",
                  "app.kubernetes.io/instance": "dev",
                  "app.kubernetes.io/managed-by": "terraform",
                  "app.kubernetes.io/name": "postgresql",
                  "app.kubernetes.io/part-of": "orcacloud-platform",
                  "app.kubernetes.io/version": "1.0.0",
                  "environment": "dev",
                  "project": "orcacloud-platform"
                },
                "name": "orcacloud-platform-dev-postgresql",
                "namespace": "orcacloud-platform",
                "resource_version": "19605",
                "uid": "b9f77694-1f9a-47be-a040-3379f3530ccb"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.107.29.198",
                "cluster_ips": [
                  "10.107.29.198"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "postgresql",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  },
                  {
                    "name": "metrics",
                    "node_port": 0,
                    "port": 9187,
                    "protocol": "TCP",
                    "target_port": "9187"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "database",
                  "app.kubernetes.io/instance": "orcacloud-platform-dev",
                  "app.kubernetes.io/name": "postgresql"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "orcacloud-platform-dev-postgresql",
            "namespace": "orcacloud-platform"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.main"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "orcacloud-platform/orcacloud-platform-dev-redis",
            "metadata": [
              {
                "annotations": {
                  "orcacloud.com/deployed-at": "2025-09-21T10:06:56Z",
                  "orcacloud.com/deployed-by": "terraform",
                  "orcacloud.com/environment": "dev",
                  "orcacloud.com/version": "1.0.0",
                  "prometheus.io/path": "/metrics",
                  "prometheus.io/port": "9121",
                  "prometheus.io/scrape": "true",
                  "terraform.io/managed": "true"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "cache",
                  "app.kubernetes.io/instance": "dev",
                  "app.kubernetes.io/managed-by": "terraform",
                  "app.kubernetes.io/name": "redis",
                  "app.kubernetes.io/part-of": "orcacloud-platform",
                  "app.kubernetes.io/version": "1.0.0",
                  "environment": "dev",
                  "project": "orcacloud-platform"
                },
                "name": "orcacloud-platform-dev-redis",
                "namespace": "orcacloud-platform",
                "resource_version": "19598",
                "uid": "a156e256-3ba9-495e-b865-95805a74038d"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.110.184.227",
                "cluster_ips": [
                  "10.110.184.227"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "redis",
                    "node_port": 0,
                    "port": 6379,
                    "protocol": "TCP",
                    "target_port": "6379"
                  },
                  {
                    "name": "metrics",
                    "node_port": 0,
                    "port": 9121,
                    "protocol": "TCP",
                    "target_port": "9121"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "cache",
                  "app.kubernetes.io/instance": "orcacloud-platform-dev",
                  "app.kubernetes.io/name": "redis"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "orcacloud-platform-dev-redis",
            "namespace": "orcacloud-platform"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.main"
          ]
        }
      ]
    },
    {
      "module": "module.zookeeper",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "orcacloud-platform/orcacloud-platform-dev-zookeeper",
            "metadata": [
              {
                "annotations": {
                  "orcacloud.com/deployed-at": "2025-09-21T10:06:56Z",
                  "orcacloud.com/deployed-by": "terraform",
                  "orcacloud.com/environment": "dev",
                  "orcacloud.com/version": "1.0.0",
                  "prometheus.io/path": "/metrics",
                  "prometheus.io/port": "",
                  "prometheus.io/scrape": "false",
                  "terraform.io/managed": "true"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "coordination",
                  "app.kubernetes.io/instance": "dev",
                  "app.kubernetes.io/managed-by": "terraform",
                  "app.kubernetes.io/name": "zookeeper",
                  "app.kubernetes.io/part-of": "orcacloud-platform",
                  "app.kubernetes.io/version": "1.0.0",
                  "environment": "dev",
                  "project": "orcacloud-platform"
                },
                "name": "orcacloud-platform-dev-zookeeper",
                "namespace": "orcacloud-platform",
                "resource_version": "19601",
                "uid": "5008dbb0-88e0-4f27-8681-a3f3f9e37b02"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.102.59.225",
                "cluster_ips": [
                  "10.102.59.225"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "client",
                    "node_port": 0,
                    "port": 2181,
                    "protocol": "TCP",
                    "target_port": "2181"
                  },
                  {
                    "name": "peer",
                    "node_port": 0,
                    "port": 2888,
                    "protocol": "TCP",
                    "target_port": "2888"
                  },
                  {
                    "name": "leader-election",
                    "node_port": 0,
                    "port": 3888,
                    "protocol": "TCP",
                    "target_port": "3888"
                  },
                  {
                    "name": "admin",
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "coordination",
                  "app.kubernetes.io/instance": "orcacloud-platform-dev",
                  "app.kubernetes.io/name": "zookeeper"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "orcacloud-platform-dev-zookeeper",
            "namespace": "orcacloud-platform"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.main"
          ]
        }
      ]
    }
  ]
}